--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.7.1",
+    "firebase-functions": "^3.18.1",
+    "firebaseui": "^6.0.1",
     "sass-loader": "^10.2.0",
+    "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-route": "^1.5.1",
     "vue-router": "^3.5.3",
