--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^10.2.0",
     "save": "^2.4.0",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
     "vue-route": "^1.5.1",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
