--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.8",
     "m3o": "^1.0.1400",
+    "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "sass-loader": "^10.2.0",
     "save": "^2.4.0",
     "vue": "^2.6.11",
