--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.8",
     "m3o": "^1.0.1400",
-    "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
     "sass-loader": "^10.2.0",
     "save": "^2.4.0",
@@ -20,6 +19,7 @@
     "vue-cookies": "^1.7.4",
     "vue-route": "^1.5.1",
     "vue-router": "^3.5.3",
+    "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
